Updates to email alerts

--- a/sites/stamped.com/bin/alerts/templates/email_reply.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_reply.html.j2
@@ -7,27 +7,27 @@
 
             <table id="body" cellpadding="0" cellspacing="0">
                 <tr>
-                    <td width="5"></td>
+                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-topleft.png);background-repeat:no-repeat;background-position:right bottom;"></td>
                     <td width="650" height="40" align="center" valign="bottom">
                     
-                        <img src="http://static.stamped.com/assets/img/email-logo-top.png" width="650" height="30" style="display:block;">
+                        <img src="http://static.stamped.com/assets/img/email-logo-top.png" width="650" height="40" style="display:block;">
 
                     </td>
-                    <td width="5"></td>
+                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-topright.png);background-repeat:no-repeat;background-position:left bottom;"></td>
                 </tr>
                 
                 <tr>
-                    <td width="5"></td>
-                    <td width="650" height="160" align="center" bgcolor="white">
+                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="650" height="150" align="center" bgcolor="white">
                     
-                        <img src="http://static.stamped.com/assets/img/email-logo.png" width="650" height="160" alt="Stamped Logo" style="display:block;">
+                        <img src="http://static.stamped.com/assets/img/email-logo.png" width="650" height="150" alt="Stamped" style="display:block;">
 
                     </td>
-                    <td width="5"></td>
+                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
                 </tr>
                 
                 <tr>
-                    <td width="5"></td>
+                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
                     <td width="650" align="center" bgcolor="white">
                         <table id="content" cellpadding="0" cellspacing="0">
                             <tr><td height="6" style="font-size:3px;">&nbsp;</td></tr>
@@ -35,7 +35,7 @@
                                 <td align="center" bgcolor="white">
                                     <table width="600" cellpadding="0" cellspacing="0">
                                         <tr>
-                                            <td width="600" height="36" align="center" valign="bottom" style="color:#333;font-family:Helvetica,Arial;font-size:16px">
+                                            <td width="600" height="36" align="center" valign="bottom" style="color:#262626;font-family:Helvetica,Arial;font-size:16px">
                                                 <strong>{{ name }}</strong> (@{{ screen_name }}) replied to you on <strong>{{ title }}</strong>.
                                             </td>
                                         </tr>
@@ -50,24 +50,48 @@
                                             <td width="600" align="center">
                                                 <table cellpadding="0" cellspacing="0">
                                                     <tr>
-                                                        <td rowspan=2 width="94" height="94">
+                                                        <td rowspan=2 width="94" height="94" valign="top">
                                                             <img src="{{ image_url_92 }}" width="92" height="92" border="1" alt="{{ screen_name }}" style="border-size:1px;border-style:solid;border-color:#e6e6e6">
                                                         </td>
                                                         <td rowspan=2 width="20" height="92">
                                                             &nbsp;
                                                         </td>
-                                                        <td width="455" valign="top" height="28" style="color:#999;font-family:Helvetica,Arial;font-weight:bold;font-size:16px">
+                                                        <td width="455" valign="top" height="28" style="color:#999999;font-family:Helvetica,Arial;font-weight:bold;font-size:16px">
                                                             {{ screen_name }}
                                                         </td>
                                                     </tr>
                                                     <tr>
-                                                        <td width="445" style="color:#333;font-family:Helvetica,Arial;font-size:16px;" valign="top">
+                                                        <td width="445" style="color:#262626;font-family:Helvetica,Arial;font-size:16px;" valign="top">
                                                             {{ blurb }}
                                                         </td>
                                                     </tr>
                                                 </table>
                                             </td>
                                         </tr>
+                                        
+                                        <tr>
+                                            <td width="600" height="27" align="center" valign="bottom">
+                                                <img src="http://static.stamped.com/assets/img/email-line.png" width="593" height="3">
+                                            </td>
+                                        </tr>
+                                        
+                                        <tr>
+                                            <td width="600" height="112" align="center" valign="middle">
+                                                <table>
+                                                    <tr>
+                                                        <td width="77" align="center" valign="middle">
+                                                            <img src="http://static.stamped.com/assets/img/email-icon-app.png" width="77" height="77" alt="Stamped App">
+                                                        </td>
+                                                        <td width="257" style="line-height:12px;font-size:12px;font-family:Helvetica,Arial,sans-serif;color:#999999;margin:0;padding:0;">
+                                                            <h3 style="line-height:14px;font-size:14px;font-family:Helvetica,Arial,sans-serif;color:#595959;font-weight:bold;margin:0 0 5px;padding:0;">Launch Stamped on your iPhone</h3>
+                                                            to reply to @{{ screen_name }}
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                                
+                                            </td>
+                                        </tr>
+                                        
                                     </table>
                                 
                                 </td>
@@ -75,34 +99,30 @@
                         </table>
 
                     </td>
-                    <td width="5"></td>
+                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
                 </tr>
                 <tr>
-                    <td width="5"></td>
-                    <td width="650" height="18" align="center">
-                    
-                        <img src="http://static.stamped.com/assets/img/email-ribbon-bottom.png" width="650" height="18">
-
-                    </td>
-                    <td width="5"></td>
+                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="650" height="10" align="center"><img src="http://static.stamped.com/assets/img/email-ribbon-bottom.png" width="650" height="10"></td>
+                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
                 </tr>
                 <tr>
-                    <td width="5"></td>
-                    <td width="650" height="18" align="center">
+                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-bottomleft.png);background-repeat:no-repeat;"></td>
+                    <td width="650" height="20"  style="background-image:url(http://static.stamped.com/assets/img/email-shadow-bottommid.png);background-repeat:no-repeat;" align="center">
                     
                         &nbsp;
 
                     </td>
-                    <td width="5"></td>
+                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-bottomright.png);background-repeat:no-repeat;"></td>
                 </tr>
                 <tr>
                     <td colspan="3" width="660" height="24" align="center" valign="middle">
                     
-                        <a href="" style="color:#779bc3;text-decoration:none;font-family:Helvetica,Arial;font-size:12px;">Change your notification settings</a>
+                        <a href="" style="color:#7A9CCC;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:12px;">Change your notification settings</a>
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="3" width="660" height="80" align="center" valign="top" style="color:#999;font-family:Helvetica,Arial;font-size:12px;">
+                    <td colspan="3" width="660" height="60" align="center" valign="top" style="color:#999999;font-family:Helvetica,Arial,sans-serif;font-size:12px;">
                         &copy;2011 Stamped, Inc.
                         
                     </td>
