--- a/sites/stamped.com/bin/alerts/templates/email_like.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_like.html.j2
@@ -7,27 +7,27 @@
 
             <table id="body" cellpadding="0" cellspacing="0">
                 <tr>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-topleft.png);background-repeat:no-repeat;background-position:right bottom;"></td>
-                    <td width="650" height="40" align="center" valign="bottom">
+                    <td width="10" style="background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-topleft.png);background-repeat:no-repeat;background-position:right bottom;"></td>
+                    <td width="650" height="56" align="center" valign="bottom">
                     
-                        <img src="http://static.stamped.com/assets/img/email-logo-top.png" width="650" height="40" style="display:block;">
+                        <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-logo-top.png" width="650" height="40" style="display:block;">
 
                     </td>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-topright.png);background-repeat:no-repeat;background-position:left bottom;"></td>
+                    <td width="10" style="background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-topright.png);background-repeat:no-repeat;background-position:left bottom;"></td>
                 </tr>
                 
                 <tr>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="10" style="background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
                     <td width="650" height="150" align="center" bgcolor="white">
                     
-                        <img src="http://static.stamped.com/assets/img/email-logo.png" width="650" height="150" alt="Stamped" style="display:block;">
+                        <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-logo.png" width="650" height="150" alt="Stamped" style="display:block;">
 
                     </td>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="10" style="background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
                 </tr>
                 
                 <tr>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="10" style="background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
                     <td width="650" align="center" bgcolor="white">
                         <table id="content" cellpadding="0" cellspacing="0">
                             <tr><td height="6" style="font-size:3px;">&nbsp;</td></tr>
@@ -35,24 +35,24 @@
                                 <td align="center" bgcolor="white">
                                     <table width="600" cellpadding="0" cellspacing="0">
                                         <tr>
-                                            <td width="600" align="center" valign="bottom" style="color:#262626;font-family:Helvetica,Arial,sans-serif;font-size:16px;line-height:43px;">
-                                                <img src="http://static.stamped.com/assets/img/email-icon-like.png" align="middle" style="vertical-align:middle;" width="42" height="42">
+                                            <td width="600" align="center" valign="bottom" style="color:#262626;font-family:Helvetica,Arial,sans-serif;font-size:16px;line-height:27px;">
+                                                <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-icon-like.png" align="middle" style="vertical-align:middle;" width="22" height="26">
                                                 <strong>{{ name }}</strong> (@{{ screen_name }}) liked your stamp of <strong>{{ title }}</strong>.
                                             </td>
                                         </tr>
                                         
                                         <tr>
                                             <td width="600" height="27" align="center" valign="bottom">
-                                                <img src="http://static.stamped.com/assets/img/email-line.png" width="593" height="3">
+                                                <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-line.png" width="593" height="3">
                                             </td>
                                         </tr>
                                         
                                         <tr>
-                                            <td width="600" height="112" align="center" valign="middle">
+                                            <td width="600" height="120" align="center" valign="middle">
                                                 <table>
                                                     <tr>
                                                         <td width="77" align="center" valign="middle">
-                                                            <img src="http://static.stamped.com/assets/img/email-icon-app.png" width="77" height="77" alt="Stamped App">
+                                                            <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-icon-app.png" width="77" height="77" alt="Stamped App">
                                                         </td>
                                                         <td width="257" style="line-height:12px;font-size:12px;font-family:Helvetica,Arial,sans-serif;color:#999999;margin:0;padding:0;">
                                                             <h3 style="line-height:14px;font-size:14px;font-family:Helvetica,Arial,sans-serif;color:#595959;font-weight:bold;margin:0 0 5px;padding:0;">Launch Stamped on your iPhone</h3>
@@ -71,26 +71,26 @@
                         </table>
 
                     </td>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="10" style="background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
                 </tr>
                 <tr>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
-                    <td width="650" height="10" align="center"><img src="http://static.stamped.com/assets/img/email-ribbon-bottom.png" width="650" height="10"></td>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="10" style="font-size:3px;line-height:3px;background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="650" height="10" align="center" style="font-size:3px;line-height:3px;"><img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-ribbon-bottom.png" width="650" height="10"></td>
+                    <td width="10" style="font-size:3px;line-height:3px;background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
                 </tr>
                 <tr>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-bottomleft.png);background-repeat:no-repeat;"></td>
-                    <td width="650" height="20"  style="background-image:url(http://static.stamped.com/assets/img/email-shadow-bottommid.png);background-repeat:no-repeat;" align="center">
+                    <td width="10" style="background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-bottomleft.png);background-repeat:no-repeat;"></td>
+                    <td width="650" height="20"  style="background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-bottommid.png);background-repeat:no-repeat;" align="center">
                     
                         &nbsp;
 
                     </td>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-bottomright.png);background-repeat:no-repeat;"></td>
+                    <td width="10" style="background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-bottomright.png);background-repeat:no-repeat;"></td>
                 </tr>
                 <tr>
                     <td colspan="3" width="660" height="24" align="center" valign="middle">
                     
-                        <a href="" style="color:#7A9CCC;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:12px;">Change your notification settings</a>
+                        <a href="http://www.stamped.com" style="color:#7A9CCC;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:12px;">Change your notification settings</a>
                     </td>
                 </tr>
                 <tr>
