--- a/sites/stamped.com/bin/alerts/templates/email_mention.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_mention.html.j2
@@ -8,7 +8,7 @@
             <table id="body" cellpadding="0" cellspacing="0">
                 <tr>
                     <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-topleft.png);background-repeat:no-repeat;background-position:right bottom;"></td>
-                    <td width="650" height="40" align="center" valign="bottom">
+                    <td width="650" height="56" align="center" valign="bottom">
                     
                         <img src="http://static.stamped.com/assets/img/email-logo-top.png" width="650" height="40" style="display:block;">
 
@@ -76,7 +76,7 @@
                                         </tr>
                                         
                                         <tr>
-                                            <td width="600" height="112" align="center" valign="middle">
+                                            <td width="600" height="120" align="center" valign="middle">
                                                 <table>
                                                     <tr>
                                                         <td width="77" align="center" valign="middle">
@@ -102,9 +102,9 @@
                     <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
                 </tr>
                 <tr>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
-                    <td width="650" height="10" align="center"><img src="http://static.stamped.com/assets/img/email-ribbon-bottom.png" width="650" height="10"></td>
-                    <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="10" style="font-size:3px;line-height:3px;background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-left.png);background-repeat:repeat-y no-repeat;"></td>
+                    <td width="650" height="10" align="center" style="font-size:3px;line-height:3px;"><img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-ribbon-bottom.png" width="650" height="10"></td>
+                    <td width="10" style="font-size:3px;line-height:3px;background-image:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/email-shadow-right.png);background-repeat:repeat-y no-repeat;"></td>
                 </tr>
                 <tr>
                     <td width="10" style="background-image:url(http://static.stamped.com/assets/img/email-shadow-bottomleft.png);background-repeat:no-repeat;"></td>
@@ -118,7 +118,7 @@
                 <tr>
                     <td colspan="3" width="660" height="24" align="center" valign="middle">
                     
-                        <a href="" style="color:#7A9CCC;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:12px;">Change your notification settings</a>
+                        <a href="http://www.stamped.com" style="color:#7A9CCC;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:12px;">Change your notification settings</a>
                     </td>
                 </tr>
                 <tr>
