--- a/sites/stamped.com/bin/alerts/templates/email_restamp.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_restamp.html.j2
@@ -56,8 +56,8 @@
                                                         <td rowspan=2 width="20" height="92">
                                                             &nbsp;
                                                         </td>
-                                                        <td width="455" valign="top" height="28" style="color:#999999;font-family:Helvetica,Arial;font-weight:bold;font-size:16px">
-                                                            {{ screen_name }}
+                                                        <td width="455" valign="top" height="28" style="color:#999999;font-family:Helvetica,Arial;font-size:16px">
+                                                            <strong>{{ screen_name }}</strong> stamped
                                                         </td>
                                                     </tr>
                                                     <tr>
