Email templates: "Welcome" and "Invite"

--- a/sites/stamped.com/bin/alerts/templates/email_follower.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_follower.html.j2
@@ -63,7 +63,7 @@
                                                                         <img src="http://static.stamped.com/logos/{{ color_primary }}-{{ color_secondary }}-email-36x36.png" alt="Stamp Color" width="36" height="36">
                                                                     </td>
                                                                     <td valign="top" style="color:#999999;font-family:Helvetica,Arial,sans-serif;font-size:14px">
-                                                                        {% if location %} {{ location }} {% else %} <strong>{{ screen_name }}</strong> {% endif %}
+                                                                        {% if location %} {{ location }} {% else %} <strong>{{ name }}</strong> (@{{ screen_name }}) {% endif %}
                                                                     </td>
                                                                 </tr>
                                                                 <tr>
